Extracted all the strings! Product Details Set.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,78 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="actual_market_price">Actual Market Price</string>
+    <string name="our_offer_price">Our Offer Price</string>
+    <string name="u20b915000">₹15000</string>
+    <string name="u20b913000">₹13000</string>
+    <string name="enter_price_pitched_to_the_user">Enter price pitched to the user</string>
+    <string name="u20b9100">₹100</string>
+
+    <string name="select_client_details">Select Client Details</string>
+    <string name="follow_up_date">Follow-up date</string>
+    <string name="enter_other_comments_and_notes">Enter other comments and notes</string>
+    <string name="save">Save</string>
+    <string name="no_investment_only_commission">No Investment. Only Commission</string>
+    <string name="recommend_products_amp_nearn_commission"><![CDATA[Recommend products &  Earn commission]]></string>
+    <string name="get_started_for_free">Get Started for FREE</string>
+    <string name="select_your_npreferred_industries">Select your  preferred industries</string>
+    <string name="we_will_personalise_the_products_for_you">We will personalise the products for you</string>
+    <string name="next">Next</string>
+    <string name="learn_how_it_works">Learn how it works</string>
+    <string name="skip">Skip</string>
+    <string name="enter_mobile_number">Enter Mobile Number</string>
+    <string name="_91">+91</string>
+    <string name="register">Register</string>
+    <string name="product_brochure">Product Brochure</string>
+    <string name="get_to_know_more_nabout_all_the_products_nfrom_byju_s">Get to know more \nabout all the products \nfrom BYJU’s</string>
+    <string name="open_brochure">Open Brochure</string>
+    <string name="byju_s">BYJU\'s</string>
+    <string name="share_and_earn">Share and earn!</string>
+    <string name="share_with_client">Share with client</string>
+    <string name="your_customer_pays">Your Customer Pays:</string>
+    <string name="earn_u20b91500_on_this_product">Earn ₹1500 on this Product</string>
+    <string name="name">Name</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="e_mail">E-mail</string>
+    <string name="logout">Logout</string>
+    <string name="sello">SELLO</string>
+    <string name="tell_us_more_about_yourself">Tell us more about yourself</string>
+    <string name="location">Location</string>
+    <string name="submit_otp">Submit OTP</string>
+    <string name="resend_otp">Resend OTP</string>
+    <string name="please_enter_otp">Please Enter OTP</string>
+    <string name="learn">Learn</string>
+    <string name="explore">Explore</string>
+    <string name="for_you">For You</string>
+    <string name="crm">CRM</string>
+    <string name="settings">Settings</string>
+    <string name="car_loannndddddddddddd">Car Loannndddddddddddd</string>
+    <string name="_10_products">10+ Products</string>
+    <string name="_10_000">10,000</string>
+    <string name="sale">/sale</string>
+    <string name="u20b9">₹</string>
+    <string name="upto">Upto</string>
+    <string name="car_loan">Car Loan</string>
+    <string name="title_here">TITLE HERE</string>
+    <string name="business_owners_who_nmaintain_leads_on_ncrm_have_50_n_more_conversions">Business owners who \nmaintain leads on \nCRM have 50% \nmore conversions</string>
+    <string name="add_your_first_lead_now">Add your first lead now</string>
+    <string name="missed_follow_ups">Missed Follow-ups</string>
+    <string name="upcoming_follow_ups">Upcoming Follow-ups</string>
+    <string name="newly_added_companies">Newly Added Companies</string>
+    <string name="browse_by_industries">Browse by Industries</string>
+    <string name="videos_to_help_you_sell_better">Videos to help you sell better</string>
+    <string name="your_industries">Your Industries</string>
+    <string name="education">Education</string>
+    <string name="_100_products">100+ Products</string>
+    <string name="byjus">BYJU\'s</string>
+    <string name="video_text">Video Text</string>
+    <string name="abhishek_singh">Abhishek Singh</string>
+    <string name="class_9th_topper">Class 9th-Topper</string>
+    <string name="page_1">Page 1</string>
+    <string name="page_2">Page 2</string>
+    <string name="page_3">Page 3</string>
+    <string name="whatsapp">WhatsApp</string>
+    <string name="call">Call</string>
+
+
 </resources>
