--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="enter_other_comments_and_notes">Enter other comments and notes</string>
     <string name="save">Save</string>
     <string name="no_investment_only_commission">No Investment. Only Commission</string>
-    <string name="recommend_products_amp_nearn_commission"><![CDATA[Recommend products &  Earn commission]]></string>
+    <string name="recommend_products_amp_nearn_commission"><![CDATA[Recommend products & \nEarn commission]]></string>
     <string name="get_started_for_free">Get Started for FREE</string>
     <string name="select_your_npreferred_industries">Select your  preferred industries</string>
     <string name="we_will_personalise_the_products_for_you">We will personalise the products for you</string>
