--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,7 @@
     <string name="whatsapp">WhatsApp</string>
     <string name="call">Call</string>
 
+    <string name="facebook_app_id">247050259518411</string>
+    <string name="fb_login_protocol_scheme">fb247050259518411</string>
 
 </resources>
