progress on explore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,7 @@
     <string name="missed_follow_ups">Missed Follow-ups</string>
     <string name="upcoming_follow_ups">Upcoming Follow-ups</string>
     <string name="newly_added_companies">Newly Added Companies</string>
+    <string name="newly_launched_products">Newly Launched Products</string>
     <string name="browse_by_industries">Browse by Industries</string>
     <string name="videos_to_help_you_sell_better">Videos to help you sell better</string>
     <string name="your_industries">Your Industries</string>
