--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="settings">Settings</string>
     <string name="car_loannndddddddddddd">Car Loannndddddddddddd</string>
     <string name="_10_products">10+ Products</string>
-    <string name="_10_products_sold">10+ Products sold</string>
+    <string name="_10_products_sold">Sold 10+ times</string>
     <string name="_10_000">10,000</string>
     <string name="sale">/sale</string>
     <string name="u20b9">₹</string>
