--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="learn">Learn</string>
     <string name="explore">Explore</string>
     <string name="for_you">For You</string>
-    <string name="crm">CRM</string>
+    <string name="crm">Leads</string>
     <string name="settings">Settings</string>
     <string name="car_loannndddddddddddd">Car Loannndddddddddddd</string>
     <string name="_10_products">10+ Products</string>
